# amc-sdm-ml-bc

./: LISCENCE.md  README.md  main.py  pyproject.toml  run.sh
classifier/: classifier.py
config/: config.yaml
model/: decision_tree.py  logiReg.py  random_forest.py
utils/: constant.py  export_result.py  metrics.py  scaler.py
